<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        >

    <CheckBox
            android:id="@+id/syrup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate_syrup"
    />

    <CheckBox
            android:id="@+id/sprinkles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sprinkles"
    />

    <CheckBox
            android:id="@+id/nuts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crushed_nuts"
    />

    <CheckBox
            android:id="@+id/cherries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cherries"
    />

    <CheckBox
            android:id="@+id/crumbles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orio_cookie_crumbles"
    />

    <Button
            android:id="@+id/show_toast_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_toast"
            android:onClick="showToastButtonClick"
    />

</LinearLayout>